# PK2026

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: kcp_bachelor.yaml  mapping_1c.yaml  mapping_bitrix.yaml  mapping_contact.yaml  mapping_deal.yaml  mapping_superservice.yaml  settings.yaml
src/admissions/: __init__.py  __main__.py  applicant.py  bitrix_client.py  bitrix_fields.py  bitrix_funnel.py  cli.py  config.py  db.py  export.py  ingest_1c.py  ingest_applications.py  ingest_bitrix.py  ingest_superservice.py  matching.py  merge.py  models.py  normalize.py  report.py  reports.py  simulate_app.py  simulation.py  sync.py  utils.py  webapp.py
tests/: conftest.py  make_fixtures.py  test_applications.py  test_export.py  test_matching.py  test_merge.py  test_normalize.py  test_reports.py  test_simulation.py  test_superservice.py  test_sync.py  test_webapp.py
tests/fixtures/: sample_1c.xlsx  sample_bitrix.json
