[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "admissions"
version = "0.1.0"
description = "Система учёта абитуриентов ФАКТ МФТИ (1С + Битрикс24)"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "requests>=2.31",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "Flask>=3.0",
    "waitress>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
admissions = "admissions.cli:main"
admissions-web = "admissions.webapp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
